# vogue

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-26-vogue-v0.1-analysis.md  2026-06-26-vogue-v0.1-coding.md  2026-06-26-vogue-v0.1-foundation.md  2026-06-26-vogue-v0.1-openalex.md  2026-06-26-vogue-v0.2-leadlag.md  2026-06-26-vogue-v0.2-suggest-config.md  2026-06-26-vogue-v0.2-suggest.md
docs/superpowers/specs/: 2026-06-26-vogue-design.md
examples/kulturtechnik/: FINDINGS.md  study.yaml  terms.yaml
examples/kulturtechnik/codings/: kulturtechnik.csv
examples/repair/: FINDINGS.md  README.md  study.yaml  terms.yaml
examples/repair/codings/: repair.csv
tests/: test_analysis.py  test_cache.py  test_classify.py  test_cli.py  test_coding.py  test_gepris.py  test_leadlag.py  test_model.py  test_openalex.py  test_pipeline.py  test_plotting.py  test_study.py  test_suggest.py
tests/fixtures/: gepris_repair_p0.html
vogue/: __init__.py  analysis.py  cli.py  coding.py  model.py  pipeline.py  plotting.py  study.py
vogue/disciplines/: classify.py  defaults.yaml
vogue/sources/: base.py  gepris.py  openalex.py
vogue/suggest/: core.py
