[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vogue-tracker"
version = "0.1.0.dev0"
description = "Track the Begriffskonjunktur of scholarly concepts across funding and publications"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "httpx>=0.27", "PyYAML>=6.0", "typer>=0.12", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
vogue = "vogue.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vogue"]

[tool.hatch.build.targets.wheel.force-include]
"vogue/disciplines/defaults.yaml" = "vogue/disciplines/defaults.yaml"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
